--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "ner-clean",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^8.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.4.8",
-    "pg": "^8.2.1"
-  }
+    "name": "semi-supervised-multi-platform-ner-tool-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "Omer Hamid Kamisli",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^8.2.0",
+        "jsonwebtoken": "^8.5.1",
+        "nodemailer": "^6.4.8",
+        "pg": "^8.2.1"
+    }
 }
