--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "dev": "nodemon index.js",
+        "start": "node index.js"
     },
     "keywords": [],
     "author": "Omer Hamid Kamisli",
@@ -15,5 +17,8 @@
         "jsonwebtoken": "^8.5.1",
         "nodemailer": "^6.4.8",
         "pg": "^8.2.1"
+    },
+    "devDependencies": {
+        "jest": "^26.0.1"
     }
 }
