--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "ner-crf-server": "^1.1.0",
+        "node-schedule": "^1.3.2",
         "nodemailer": "^6.4.8",
-        "pg": "^8.2.1"
+        "pg": "^8.2.1",
+        "turkish-columnist-crawler": "^1.0.3"
     },
     "devDependencies": {
         "jest": "^26.0.1"
