--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "author": "Omer Hamid Kamisli",
     "license": "ISC",
     "dependencies": {
+        "@hapi/joi": "^17.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-ip": "^1.0.4",
+        "express-useragent": "^1.0.13",
         "jsonwebtoken": "^8.5.1",
         "ner-crf-server": "^1.1.0",
         "node-schedule": "^1.3.2",
