--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "express-ip": "^1.0.4",
         "express-useragent": "^1.0.13",
         "fs-extra": "^9.0.0",
+        "helmet": "^3.23.2",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.26.0",
+        "morgan": "^1.10.0",
         "ner-crf-server": "^1.1.0",
         "node-schedule": "^1.3.2",
         "nodemailer": "^6.4.8",
