--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-chartjs-2": "^2.7.6",
+        "react-color": "^2.18.1",
         "react-dom": "^16.8.6",
         "react-perfect-scrollbar": "^1.5.3",
         "react-router-dom": "^5.0.1",
