--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
         "axios": "^0.19.2",
         "chart.js": "^2.8.0",
         "clsx": "^1.0.4",
+        "country-data": "0.0.31",
         "history": "^4.9.0",
         "moment": "^2.24.0",
         "node-sass": "^4.12.0",
@@ -41,6 +42,7 @@
         "react": "^16.8.6",
         "react-chartjs-2": "^2.7.6",
         "react-color": "^2.18.1",
+        "react-country-flag": "^2.2.0",
         "react-dom": "^16.8.6",
         "react-perfect-scrollbar": "^1.5.3",
         "react-router-dom": "^5.0.1",
