--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
         "react-color": "^2.18.1",
         "react-country-flag": "^2.2.0",
         "react-dom": "^16.8.6",
+        "react-file-reader": "^1.1.4",
         "react-perfect-scrollbar": "^1.5.3",
         "react-router-dom": "^5.0.1",
         "react-scripts": "^3.4.1",
