--- a/web/package.json
+++ b/web/package.json
@@ -45,9 +45,10 @@
         "react-country-flag": "^2.2.0",
         "react-dom": "^16.8.6",
         "react-file-reader": "^1.1.4",
+        "react-google-recaptcha": "^2.1.0",
         "react-perfect-scrollbar": "^1.5.3",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "^3.4.1",
+        "react-scripts": "^3.4.3",
         "recompose": "^0.30.0",
         "underscore": "^1.9.1",
         "uuid": "^3.3.2",
