--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
         "chart.js": "^2.8.0",
         "clsx": "^1.0.4",
         "country-data": "0.0.31",
+        "file-saver": "^2.0.5",
         "history": "^4.9.0",
         "moment": "^2.24.0",
         "node-sass": "^4.12.0",
